--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,7 +18,7 @@ builds:
       - arm64
 
 brews:
-  - tap:
+  - repository:
       owner: kishaningithub
       name: homebrew-tap
     folder: Formula
