Reduce amount of ko image config

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -41,8 +41,7 @@ nfpms:
       - rpm
 
 kos:
-  - main: .
-    base_image: alpine
+  - base_image: alpine
     repository: ghcr.io/kishaningithub/tf-import-gen
     platforms:
       - linux/amd64
