--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,6 +7,8 @@ before:
 builds:
   - main: .
     binary: tf-import-gen
+    flags:
+      - -trimpath
     ldflags:
       - -s -w -X main.Version={{.Version}}
     goos:
