--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,10 +30,7 @@ jobs:
         with:
           go-version-file: 'go.mod'
 
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v5
-        with:
-          version: latest
-          args: release --clean
+      - name: Run release
+        run: make release
         env:
           GITHUB_TOKEN: ${{ secrets.GA_GORELEASER_TOKEN }}
